--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,15 @@
         <activity android:name=".Activities.WordsSetActivity" />
         <activity android:name=".Activities.NewWordsSetActivity" />
         <activity android:name=".Activities.Trainig"></activity>
+        <activity
+            android:name=".Activities.TextSelectionActivity"
+            android:label="@string/process_text_action_name">
+            <intent-filter>
+                <action android:name="android.intent.action.PROCESS_TEXT" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:mimeType="text/plain" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
