--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         </activity>
         <activity android:name=".Activities.WordsSetActivity" />
         <activity android:name=".Activities.NewWordsSetActivity" />
-        <activity android:name=".Activities.Trainig"></activity>
+        <activity android:name=".Activities.Training"></activity>
         <activity
             android:name=".Activities.TextSelectionActivity"
             android:label="@string/process_text_action_name">
