--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         <activity android:name=".Activities.NewWordsSetActivity" />
         <activity android:name=".Activities.Training"></activity>
         <activity
-            android:name=".Activities.TextSelectionActivity"
+            android:name=".Activities.WordsAddActivity"
             android:label="@string/process_text_action_name">
             <intent-filter>
                 <action android:name="android.intent.action.PROCESS_TEXT" />
