--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,10 @@ android {
     buildToolsVersion '26.0.2'
 }
 
+ext.anko_version = '0.10.4'
+
 dependencies {
+    compile "org.jetbrains.anko:anko-sqlite:$anko_version"
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:26.1.0'
